--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Sydney Dimmock's Homepage
-description: test
+
+title: Sydney Dimmock
+description: PhD student at the University of Bristol
 
